index.html changed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li>Po drugie</li>
       <!-- popraw tekst na "po trzecie" -->
       <li>Po trzecie</li>
+      <li>Po czwarte</li>
     </ul>
 
     <!-- usuń trzy linie (oba znacznik <p> oraz treść) -->
