correct fav food name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
 
     <!-- zmień  -->
-    <p>Moje ulubione jedzenie to jarmuż</p>
+    <p>Moje ulubione jedzenie to czekolada</p>
 
     <!-- zmień zdjęcie na psa tzn. zmień cat.jpg na dog.jpg-->
     <img
